[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "libqtum"
author = "Artem Ivanov"
author-email = "libqtum@ivart.xyz"
home-page = "https://github.com/ivanovart/libqtum"
requires=[
    "pycryptodome==3.9.7",
    "ecdsa==0.15",
    "eth-utils==1.8.4",
    "eth_abi==2.1.1",
    "requests>=2.22.0",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
description-file = "README.md"
requires-python = ">=3.7"


